2006-08-17  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany-pango.schemas:

	Enable pango for Thai locale. Bug #339532.

2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Fix a typo.
	* configure.ac: Fix intltool req.

2006-08-13  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-print-utils.c:
	(ephy_print_utils_page_setup_new_from_key_file):

	Don't crash on error. Bug #351187.

2006-08-12  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:

	nsIPassword.h is always available. Fixes bug #350997.

2006-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* plugins/desktop-file/plugin.cpp:

	Fix crash on PPC due to differing pointer types.

2006-08-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Add missing semicolon. Bug #350711.

2006-08-09  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/popup-commands.c: (background_download_completed):
	* lib/ephy-file-helpers.h: (ephy_file_launch_desktop_file):
	* lib/ephy-file-helpers.c: (ephy_file_launch_desktop_file):
	
	ephy_file_launch_desktop_file accepts now a parameter. Fix #343321.

	* src/ephy-window.c:
	
	Remove CONF_DESKTOP_BG_PICTURE #define. No need.
		
2006-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Fix one AS_HELP_STRING.

2006-08-08  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/epiphany.defs:
	* src/ephy-notebook.h:
	* src/ephy-notebook.c:
	* src/epiphany.override:

	Expose notebook->priv->focused_pages to extensions. Fix bug #350187.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	
	Post-release version bump.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 2.5.91 ===

	* configure.ac:

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c:
	
	Don't allow closing the window if quit is locked down.
	Patch by Diego Escalante Urrelo, bug #320091.

2006-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: