@@ -1,5 +1,12 @@
 2006-08-17  Christian Persch  <chpe@cvs.gnome.org>
 
+	* lib/ephy-print-utils.c:
+	
+	Fix crash when reading the options file. Bug #351788.
+	Actually return the settings object.
+
+2006-08-17  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/epiphany-pango.schemas:
 
 	Enable pango for Thai locale. Bug #339532.
